# fastapi-webapp

./: .env  .gitignore  .pre-commit-config.yaml  README.md  auth.py  blog.db  config.py  database.py  docker-compose.yml  email_utils.py  exception_handlers.py  init.sql  main.py  models.py  populate_db.py  pyproject.toml  schema.py  schemas.py
alembic/: env.py
alembic/versions/: 2bcc9963929a_add_likes_to_posts.py  ac398e0b33fd_initial_schema.py
routers/: posts.py  templating.py  users.py
templates/: account.html  home.html  layout.html  login.html  post.html  register.html  reset_password.html  user_posts.html
templates/email/: password_reset.html
