[project]
name = "fastapi-gdc-blog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi[standard]>=0.137.1",
    "greenlet>=3.5.2",
    "pwdlib[argon2]>=0.3.0",
    "pydantic-settings>=2.14.1",
    "pyjwt>=2.13.0",
    "sqlalchemy>=2.0.51",
]

[dependency-groups]
dev = [
    "commitizen>=4.16.3",
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
    "ruff>=0.15.17",
]

[tool.mypy]
plugins = ["pydantic.mypy"]
disallow_untyped_defs = true
warn_unused_ignores = true
warn_return_any = true

[[tool.mypy.overrides]]
module = ["main", "routers", "routers.*"]
ignore_errors = true

[[tool.mypy.overrides]]
module = ["config"]
ignore_errors = true

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "v$version"
update_changelog_on_bump = true
